--- a/.github/workflows/terraform-cicd.yml
+++ b/.github/workflows/terraform-cicd.yml
@@ -101,100 +101,45 @@ jobs:
           #!/bin/bash
           set -euo pipefail
 
-          echo "=== Directorio actual ==="
+          # Directorio y debug
           pwd
-
-          echo "=== Terraform init y refresh ==="
-          terraform init -backend-config="bucket=${TF_BUCKET}" \
-                        -backend-config="region=${TF_REGION}" \
-                        -backend-config="key=terraform.tfstate" \
-                        -backend-config="dynamodb_table=${TF_TABLE}" \
-                        -reconfigure
-          terraform refresh -input=false
-
-          echo "=== Terraform state list ==="
-          terraform state list
-
-          echo "=== Terraform state show aws_instance.this ==="
-          terraform state show aws_instance.this || echo "(no se encontró aws_instance.this)"
-
-          echo "=== Terraform state pull (json completo) ==="
-          terraform state pull || echo "(no se pudo hacer state pull)"
-
-          echo "=== Terraform outputs ==="
-          terraform output || echo "(no hay outputs)"
-          terraform output -json || echo "(no hay outputs en JSON)"
-          terraform output -raw instance_ip || echo "(no se pudo obtener instance_ip crudo)"
-
-          echo "=== Obtener AMI desde el state ==="
-          AMI_ID=$(terraform state show -no-color aws_instance.this 2>/dev/null | sed -n 's/^ami *= *"\(.*\)"/\1/p' || echo "")
-          echo "AMI_ID: '$AMI_ID'"
-
-          echo "=== Obtener usuario desde AWS CLI ==="
-          aws ec2 describe-images --image-ids "$AMI_ID" --region "$TF_REGION" \
-              --query 'Images[0].Tags' --output json || echo "(no se pudo obtener tags de la AMI)"
-
-          echo "=== Obtener nombre de la AMI ==="
-          aws ec2 describe-images --image-ids "$AMI_ID" --region "$TF_REGION" \
-              --query 'Images[0].Name' --output text || echo "(no se pudo obtener nombre de la AMI)"
-
-          echo "=== Obtener public IP de la instancia (raw) ==="
-          terraform output -raw instance_ip || echo "(no se pudo obtener instance_ip crudo)"
-          
-          echo "=== Exportando para GH Actions (raw) ==="
-          echo "ec2_user=" >> "$GITHUB_OUTPUT"
-          echo "ec2_host=" >> "$GITHUB_OUTPUT"
-        shell: bash
-
-
-      - name: Obtener EC2_USER y EC2_HOST (debug extendido)
-        id: ec2-vars
-        working-directory: infra/terraform
-        run: |
-          #!/bin/bash
-          set -euo pipefail
-
-          echo "=== Directorio actual ==="
-          pwd
-
-          echo "=== Terraform state list ==="
           terraform state list || true
 
-          # Chequear si existe aws_instance.this en el state
-          if terraform state list 2>/dev/null | grep -q '^aws_instance.this$'; then
-            echo "aws_instance.this encontrado en el state ✅"
-          else
-            echo "No hay aws_instance.this en el state. No se generarán secrets."
-            echo "ec2_user=" >> "$GITHUB_OUTPUT"
-            echo "ec2_host=" >> "$GITHUB_OUTPUT"
-            exit 0
+          # obtener IP (json preferred) con fallback
+          RAW_IP=$(terraform output -json 2>/dev/null | jq -r '.instance_ip.value // empty' 2>/dev/null || true)
+          if [ -z "$RAW_IP" ]; then
+            RAW_IP=$(terraform output -raw instance_ip 2>/dev/null || echo "")
+          fi
+          EC2_HOST=$(echo "$RAW_IP" | grep -oE '([0-9]{1,3}\.){3}[0-9]{1,3}' | head -n1 || true)
+
+          # obtener AMI (json preferred)
+          AMI_ID=$(terraform state pull -json 2>/dev/null \
+                  | jq -r '.resources[] 
+                            | select(.type=="aws_instance" and .name=="this") 
+                            | .instances[0].attributes.ami // empty' 2>/dev/null || true)
+
+          # Fallback si no hay jq o state pull distinto
+          if [ -z "$AMI_ID" ]; then
+            AMI_ID=$(terraform state show -no-color aws_instance.this 2>/dev/null \
+                    | sed -n 's/^[[:space:]]*ami *= *"\(.*\)"/\1/p' || true)
           fi
 
-          echo "=== Obteniendo output instance_ip ==="
-          RAW_IP=$(terraform output -raw instance_ip 2>/dev/null || echo "")
-          echo "Raw instance_ip: '$RAW_IP'"
+          # Region desde entorno (no usar ${{ }})
+          AWS_REGION="${AWS_REGION:-us-east-1}"
 
-          # Limpiar posibles caracteres extras y debug lines
-          EC2_HOST=$(echo "$RAW_IP" | tr -d '\r' | tr -d '\n' | xargs)
-          echo "EC2_HOST limpio: '$EC2_HOST'"
+          # Obtener user desde tag 'User' o por nombre de AMI
+          EC2_USER=""
+          if [ -n "$AMI_ID" ]; then
+            EC2_USER=$(aws ec2 describe-images --image-ids "$AMI_ID" --region "$AWS_REGION" \
+                      --query 'Images[0].Tags[?Key==`User`].Value' --output text 2>/dev/null || true)
+          fi
 
-          echo "=== Obteniendo AMI de la instancia ==="
-          AMI_ID=$(terraform state show -no-color aws_instance.this 2>/dev/null \
-                    | sed -n 's/^ami *= *"\(.*\)"/\1/p' || true)
-          echo "AMI_ID detectada: '$AMI_ID'"
-
-          AWS_REGION="${{ github.event.inputs.aws_region || secrets.AWS_REGION || 'us-east-1' }}"
-          echo "Región AWS usada: $AWS_REGION"
-
-          # Intentar obtener usuario desde tag 'User'
-          EC2_USER=$(aws ec2 describe-images --image-ids "${AMI_ID:-}" --region "$AWS_REGION" \
-                    --query 'Images[0].Tags[?Key==`User`].Value' --output text 2>/dev/null || true)
-          echo "Usuario desde tag 'User': '$EC2_USER'"
-
-          # Si no existe tag 'User', inferir por nombre de la AMI
           if [ -z "${EC2_USER:-}" ] || [ "$EC2_USER" = "None" ]; then
-            ami_name=$(aws ec2 describe-images --image-ids "${AMI_ID:-}" --region "$AWS_REGION" \
-                      --query 'Images[0].Name' --output text 2>/dev/null || true)
+            ami_name=""
+            if [ -n "$AMI_ID" ]; then
+              ami_name=$(aws ec2 describe-images --image-ids "$AMI_ID" --region "$AWS_REGION" \
+                        --query 'Images[0].Name' --output text 2>/dev/null || true)
+            fi
             ami_name_lc=$(echo "${ami_name:-}" | tr '[:upper:]' '[:lower:]' || true)
             case "$ami_name_lc" in
               *ubuntu*) EC2_USER="ubuntu" ;;
@@ -204,14 +149,14 @@ jobs:
               *windows*) EC2_USER="Administrator" ;;
               *) EC2_USER="ec2-user" ;;
             esac
-            echo "Usuario inferido por AMI: '$EC2_USER'"
           fi
 
-          echo "=== Valores finales a exportar ==="
-          echo "EC2_USER='$EC2_USER'"
+          # Debug final
+          echo "AMI_ID='$AMI_ID'"
           echo "EC2_HOST='$EC2_HOST'"
+          echo "EC2_USER='$EC2_USER'"
 
-          # Exportar para GH Actions
+          # Export to GH Actions
           echo "ec2_user=${EC2_USER}" >> "$GITHUB_OUTPUT"
           echo "ec2_host=${EC2_HOST}" >> "$GITHUB_OUTPUT"
         shell: bash
